[package]
name = "poptea"
version = "0.1.0"
edition = "2021"
authors = ["klve <klvebunc@pm.me>"]
description = "Library for writing Gemini clients and servers"
repository = "https://sr.ht/~klve/poptea/"
license = "MIT"
keywords = ["gemini", "smolweb", "smolnet", "tofu", "rustls"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = {version = "0.20.1", features = ["dangerous_configuration"]}
url = "2.2.2"
x509-parser = "0.12.0"
sha3 = "0.9.1"
data-encoding = "2.3.2"
